test/invalid/builtins/plus-func.js
function f(x,y) { return x + y; }

f;


f(false,false);

